<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrackerActivity" >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/ac_p1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/checkBox1"
        android:text="@string/ac_p2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/checkBox2"
        android:text="@string/ac_p3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="10dp"
        android:text="@string/cm_p1" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4"
        android:layout_alignLeft="@+id/checkBox2"
        android:text="@string/cm_p2" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox5"
        android:layout_alignLeft="@+id/checkBox3"
        android:text="@string/cm_p3" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_below="@+id/checkBox4"
        android:layout_marginTop="10dp"
        android:text="@string/ta_ap" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox7"
        android:layout_alignBottom="@+id/checkBox7"
        android:layout_alignLeft="@+id/checkBox5"
        android:text="@string/ta_f" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox8"
        android:layout_alignBottom="@+id/checkBox8"
        android:layout_alignLeft="@+id/checkBox6"
        android:text="@string/ta_u" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox7"
        android:layout_below="@+id/checkBox7"
        android:layout_marginTop="10dp"
        android:text="@string/se_p1" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox10"
        android:layout_alignBottom="@+id/checkBox10"
        android:layout_alignLeft="@+id/checkBox8"
        android:text="@string/se_p2" />

    <CheckBox
        android:id="@+id/checkBox12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox11"
        android:layout_alignBottom="@+id/checkBox11"
        android:layout_alignLeft="@+id/checkBox9"
        android:text="@string/se_p3" />
    
    <CheckBox
        android:id="@+id/checkBox13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox10"
        android:layout_below="@+id/checkBox10"
        android:layout_marginTop="10dp"
        android:text="@string/cof_p1" />
    
    <CheckBox
        android:id="@+id/checkBox14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox13"
        android:layout_alignBottom="@+id/checkBox13"
        android:layout_alignLeft="@+id/checkBox11" 
        android:text="@string/cof_p2" />
    
    <CheckBox
        android:id="@+id/checkBox15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox14"
        android:layout_alignBottom="@+id/checkBox14"
        android:layout_alignLeft="@+id/checkBox12"
        android:text="@string/cof_p3" />
    
    <CheckBox
        android:id="@+id/checkBox16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox13"
        android:layout_below="@+id/checkBox13"
        android:layout_marginTop="10dp"
        android:text="@string/hotw_p1" />
    
    <CheckBox
        android:id="@+id/checkBox17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox16"
        android:layout_alignBottom="@+id/checkBox16"
        android:layout_alignLeft="@+id/checkBox14" 
        android:text="@string/hotw_p2" />
    
    <CheckBox
        android:id="@+id/checkBox18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox17"
        android:layout_alignBottom="@+id/checkBox17"
        android:layout_alignLeft="@+id/checkBox15"
        android:text="@string/hotw_p3" />
    
    <CheckBox
        android:id="@+id/checkBox19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox16"
        android:layout_below="@+id/checkBox16"
        android:layout_marginTop="10dp"
        android:text="@string/coe_p1" />
    
    <CheckBox
        android:id="@+id/checkBox20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox19"
        android:layout_alignBottom="@+id/checkBox19"
        android:layout_alignLeft="@+id/checkBox17" 
        android:text="@string/coe_p2" />
    
    <CheckBox
        android:id="@+id/checkBox21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox20"
        android:layout_alignBottom="@+id/checkBox20"
        android:layout_alignLeft="@+id/checkBox18"
        android:layout_marginTop="10dp"
        android:text="@string/coe_p3" />
    
    <CheckBox
        android:id="@+id/checkBox22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox19"
        android:layout_below="@+id/checkBox19"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/ar_p1" />
    
    <CheckBox
        android:id="@+id/checkBox23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox22"
        android:layout_alignBottom="@+id/checkBox22"
        android:layout_toRightOf="@+id/checkBox11"
        android:text="@string/ar_p2" />

    <CheckBox
        android:id="@+id/checkBox24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox22"
        android:layout_below="@+id/checkBox22"
        android:layout_marginTop="10dp"
        android:text="@string/ar_p3" />
        
    <CheckBox
        android:id="@+id/checkBox25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox24"
        android:layout_alignBottom="@+id/checkBox24"
        android:layout_toRightOf="@+id/checkBox11"
        android:text="@string/ar_p4" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox19"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/gold_earned" />

</RelativeLayout>